small alignement fix

--- a/styles/sass/_portfolio.scss
+++ b/styles/sass/_portfolio.scss
@@ -8,7 +8,7 @@
 
 .projectList {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     flex-wrap: wrap;
 }
